--- a/app/views/my/blocks/_custom_queries.html.erb
+++ b/app/views/my/blocks/_custom_queries.html.erb
@@ -1,24 +1,13 @@
-<h3><%= l(:label_query_plural) %></h3>
+<% sidebar_queries.each do |query|
+	query = Query.find(query.id) # Necessary as sidebar_queries doesn't correctly initialize filters
+%>
+	<h3><%= query.name %></h3>
 
-<table class="list queries">		
-	<thead>
-		<tr>
-			<th><%=l(:label_query)%></th>
-			<th><%=l(:label_issue_plural)%></th>
-		</tr>
-	</thead>
-	<tbody>	
-		<% sidebar_queries.each do |query|
-			query = Query.find(query.id) # Necessary as sidebar_queries doesn't correctly initialize filters
-			issue_count = Issue.count(:include => [:status, :project], :conditions => query.statement)
-		%>
-			<tr class="<%= cycle('odd', 'even') %> <%= 'empty' if issue_count == 0 %>">
-				<td class="query"><%= link_to(h(query.name), :controller => 'issues', :action => 'index', :project_id => @project, :query_id => query) %></td>
-				<td class="count"><%= issue_count %></td>
-			</tr>
-		<% end %>
-	</tbody>
-</table>
+	<%= render :partial => 'issues/list_simple', :locals => { :issues => Issue.find(:all, :include => [:status, :project], :conditions => query.statement) } %>
+
+
+<% end %>
+
 
 <% content_for :header_tags do %>
     <%= stylesheet_link_tag 'my_widgets', :plugin => 'redmine_my_widgets' %>
