--- a/app/views/my/blocks/_custom_queries.html.erb
+++ b/app/views/my/blocks/_custom_queries.html.erb
@@ -37,5 +37,5 @@
 </table>
 
 <% content_for :header_tags do %>
-  <%= stylesheet_link_tag 'my_widgets', :plugin => 'redmine_my_widgets' %>
+  <%= stylesheet_link_tag 'my_widgets', :plugin => 'redmine_my_widgets_plugin' %>
 <% end %>
