--- a/app/views/my/blocks/_assigned_issues_cloud.html.erb
+++ b/app/views/my/blocks/_assigned_issues_cloud.html.erb
@@ -35,5 +35,5 @@
 <% end %>
 
 <% content_for :header_tags do %>
-    <%= stylesheet_link_tag 'my_widgets', :plugin => 'redmine_my_widgets' %>
+    <%= stylesheet_link_tag 'my_widgets', :plugin => 'redmine_my_widgets_plugin' %>
 <% end %> 
