--- a/app/views/my/blocks/_assigned_issues_cloud.html.erb
+++ b/app/views/my/blocks/_assigned_issues_cloud.html.erb
@@ -1,18 +1,26 @@
 <%    
     projects = User.current.memberships.collect {|m| m.project if m.roles.each {|role| role.allowed_to?(:view_issues)}}
     users = projects.collect {|p| p.members.collect { |m| m.user } }.flatten.uniq.sort
-    data = ActiveRecord::Base.connection.select_all("select a.id as assigned_to_id, count(i.id) as total 
+
+    if users.length > 0 
+      data = ActiveRecord::Base.connection.select_all("select a.id as assigned_to_id, count(i.id) as total 
                                                 from #{Issue.table_name} i, #{IssueStatus.table_name} s, #{User.table_name} a
                                                 where i.status_id=s.id and i.assigned_to_id=a.id and s.is_closed = false
-                                                and a.id in ("+users.collect{|u| u.id}.join(",")+")
+                                                and a.id in (0"+users.collect{|u| u.id}.join(",")+")
                                                 group by a.id").index_by { |x| x["assigned_to_id"].to_i }
 
-    smallest = 6
-    largest = 22
-    totals = data.collect { |aid, d| d["total"].to_i }
-    totals_min = totals.min
-    totals_max = totals.max
-    font_step = (largest - smallest).to_f / [totals_max - totals_min, 1].max.to_f
+      smallest = 6
+      largest = 22
+
+      if data.length > 0
+        totals = data.collect { |aid, d| d["total"].to_i }
+        totals_min = totals.min
+        totals_max = totals.max
+        font_step = (largest - smallest).to_f / [totals_max - totals_min, 1].max.to_f
+      end
+    else
+      data = Array.new
+    end
 %>
 
 <h3><%= l(:label_assigned_issues_cloud) %></h3>
