--- a/app/views/my/blocks/_project_issues_cloud.html.erb
+++ b/app/views/my/blocks/_project_issues_cloud.html.erb
@@ -1,17 +1,24 @@
 <%    
     projects = User.current.memberships.collect {|m| m.project if m.roles.each {|role| role.allowed_to?(:view_issues)}}
-    data = ActiveRecord::Base.connection.select_all("select p.id as project_id, count(i.id) as total 
+    if projects.length > 0
+      data = ActiveRecord::Base.connection.select_all("select p.id as project_id, count(i.id) as total 
 												from #{Issue.table_name} i, #{IssueStatus.table_name} s, #{Project.table_name} p
 												where i.status_id=s.id and i.project_id=p.id and s.is_closed = false
 												and p.id in ("+projects.collect{|p| p.id}.join(",")+")
 												group by p.id").index_by { |x| x["project_id"].to_i }
+      smallest = 6
+      largest = 22
+ 
+      if data.length > 0
+        totals = data.collect { |aid, d| d["total"].to_i }
+        totals_min = totals.min
+        totals_max = totals.max
+        font_step = (largest - smallest).to_f / [totals_max - totals_min, 1].max.to_f
+      end
+    else
+      data = Array.new()
+    end
 
-    smallest = 6
-    largest = 22
-    totals = data.collect { |aid, d| d["total"].to_i }
-    totals_min = totals.min
-    totals_max = totals.max
-    font_step = (largest - smallest).to_f / [totals_max - totals_min, 1].max.to_f
 %>
 
 <h3><%= l(:label_project_issues_cloud) %></h3>
