Don't die on users with projects without issues
If a user is member of one or more projects, but that project
doesn't have any issues, totals_min and totals_max are nil,
leading to an error in the font_step calculation. Make sure
totals_min and totals_max have a sane value.

--- a/app/views/my/blocks/_project_issues_cloud.html.erb
+++ b/app/views/my/blocks/_project_issues_cloud.html.erb
@@ -9,8 +9,8 @@
     smallest = 6
     largest = 22
     totals = data.collect { |aid, d| d["total"].to_i }
-    totals_min = totals.min
-    totals_max = totals.max
+    totals_min = totals.min || 0
+    totals_max = totals.max || 0
     font_step = (largest - smallest).to_f / [totals_max - totals_min, 1].max.to_f
 %>
 
