Don't run SQL queries with empty 'IN ()'

--- a/app/views/my/blocks/_assigned_issues_cloud.html.erb
+++ b/app/views/my/blocks/_assigned_issues_cloud.html.erb
@@ -1,7 +1,8 @@
 <%    
     projects = User.current.memberships.collect {|m| m.project if m.roles.each {|role| role.allowed_to?(:view_issues)}}
     users = projects.collect {|p| p.members.collect { |m| m.user } }.flatten.uniq.sort
-    data = ActiveRecord::Base.connection.select_all("select a.id as assigned_to_id, count(i.id) as total 
+    data = [] if users.empty?
+    data ||= ActiveRecord::Base.connection.select_all("select a.id as assigned_to_id, count(i.id) as total
                                                 from #{Issue.table_name} i, #{IssueStatus.table_name} s, #{User.table_name} a
                                                 where i.status_id=s.id and i.assigned_to_id=a.id and s.is_closed = false
                                                 and a.id in ("+users.collect{|u| u.id}.join(",")+")
