--- a/app/views/my/blocks/_issues_to_accept.html.erb
+++ b/app/views/my/blocks/_issues_to_accept.html.erb
@@ -1,11 +1,7 @@
 <% conditions = { :status_id => 3 } %>
-<h3><%= l(:label_reported_issues_to_accept) %> (<%= Issue.visible.count(:conditions => conditions) %>)</h3>
+<h3><%= l(:label_reported_issues_to_accept) %> (<%= Issue.visible.where(conditions).count() %>)</h3>
 
-<% reported_issues = Issue.visible.find(:all, 
-                                :conditions => conditions,
-                                :limit => 10, 
-                                :include => [ :status, :project, :tracker ], 
-                                :order => "#{Issue.table_name}.updated_on DESC") %>
+<% reported_issues = Issue.visible.where(conditions).includes(:status, :project, :tracker).order(updated_on: :desc).limit(10) %>
 <%= render :partial => 'issues/list_simple', :locals => { :issues => reported_issues } %>
 <% if reported_issues.length > 0 %>
 <p class="small"><%= link_to l(:label_issue_view_all), :controller => 'issues',
